# SkinCancerDetection

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  train_model.py
backend/: Dockerfile  requirements.txt  train_model.py
backend/app/: main.py
backend/app/api/: predict.py
backend/app/core/: config.py
backend/app/db/: database.py
backend/app/schemas/: prediction.py
backend/app/services/: inference.py
backend/tests/: test_predict.py
frontend/: Dockerfile  index.html
frontend/src/: App.jsx  index.css
frontend/src/components/: ImageUpload.jsx
